# Robinhood-Agent-Setup

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  plugin.json  pyproject.toml
agents/: execution-trader.md  portfolio-strategist.md  risk-officer.md
config/: config.yaml
data/samples/: sample_run.json
references/: execution-and-safety.md  memory-and-learning.md  risk-limits.md  robinhood-mcp-integration.md  strategy-playbook.md  us-market-conventions.md  us-market-data-sources.md
scripts/: validate_skills.py
skills/company-news/: SKILL.md
skills/concentration-analysis/: SKILL.md
skills/dca-strategy/: SKILL.md
skills/macro-regime/: SKILL.md
skills/market-enrichment/: SKILL.md
skills/market-hours-guard/: SKILL.md
skills/mean-reversion-strategy/: SKILL.md
skills/momentum-strategy/: SKILL.md
skills/order-execution/: SKILL.md
skills/portfolio-intake/: SKILL.md
skills/rebalancing-strategy/: SKILL.md
skills/relative-strength-strategy/: SKILL.md
skills/risk-guardian/: SKILL.md
skills/thematic-strategy/: SKILL.md
skills/trade-decisioning/: SKILL.md
skills/trade-reporting/: SKILL.md
skills/using-robinhood-agent/: SKILL.md
skills/wash-sale-guard/: SKILL.md
src/robinhood_agent/: __init__.py  cli.py
src/robinhood_agent/agents/: __init__.py  base.py  decision_agent.py  execution_agent.py  intake_agent.py  macro_regime_agent.py  orchestrator.py  (+4 more)
template/: SKILL.md
tests/: conftest.py  test_calendar.py  test_decision.py  test_macro_regime.py  test_memory.py  test_pipeline.py  test_risk.py  test_strategies.py
(+53 files in other folders)
