[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-robinhood-agent"
version = "1.0.0"
description = "A sophisticated, deterministic equities trading agent with a risk guardian and a Robinhood agentic-trading (MCP) adapter. Paper mode by default."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Robinhood Agent contributors" }]
keywords = ["trading", "agent", "robinhood", "mcp", "risk-management", "equities"]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
llm = ["openai>=1.30"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
robinhood-agent = "robinhood_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = false
